# TomoriGo

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-08-gitcommit-plan.md
docs/superpowers/specs/: 2026-07-08-gitcommit-design.md
src/gitcommit/: ai.py  cli.py  config.py  git.py  prompt.py  tui.py
src/gitcommit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_ai.py  test_config.py  test_git.py  test_prompt.py  test_tui.py
